# image-worker

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  main.py  parameters.yml.dist  requirements.txt  setup.cfg  utils.py  worker.php  worker.py
imageworker/: image.py  setup.py  utils.py  worker.py
imageworker/config/: parameters.yml.dist
tests/imageworker/: worker.py
