[metadata]
name = image-worker
summary = Data feed
description-file = README.md
author = Pierre-Henri Bourdeau
author-email = phbasic@gmail.com
license = Apache License, Version 2.0

[files]
packages = imageworker

[flake8]
ignore = D203
exclude = tests,.git,__pycache__
max-complexity = 10
max-line-length = 150

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 150
exclude = tests,.git,__pycache__

[pydocstyle]
ignore = D100,D107,D2

[coverage:run]
source=imageworker/*
omit=*/tests/*

[tool:pytest]
console_output_style=progress
addopts = --maxfail=1
